--- a/package.json
+++ b/package.json
@@ -28,43 +28,45 @@
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-redux": "^7.2.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-redux": "^8.0.2",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.8",
-    "@babel/core": "^7.12.9",
+    "@babel/core": "^7.18.5",
     "@babel/preset-env": "^7.12.7",
     "@babel/preset-react": "^7.12.7",
-    "@storybook/addon-actions": "^6.1.10",
+    "@mdx-js/loader": "^2.1.2",
+    "@storybook/addon-actions": "^6.5.9",
     "@storybook/addon-docs": "^6.5.9",
-    "@storybook/addon-essentials": "^6.1.10",
-    "@storybook/addon-links": "^6.1.10",
-    "@storybook/react": "^6.1.10",
-    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.7",
-    "babel-jest": "^26.6.3",
+    "@storybook/addon-essentials": "^6.5.9",
+    "@storybook/addon-links": "^6.5.9",
+    "@storybook/react": "^6.5.9",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.3.0",
+    "babel-jest": "^28.1.1",
     "babel-loader": "^8.2.2",
-    "css-loader": "^5.0.1",
-    "cypress": "^6.0.1",
-    "enzyme": "^3.11.0",
-    "eslint": "^7.14.0",
+    "css-loader": "^6.7.1",
+    "cypress": "^10.1.0",
+    "eslint": "^8.18.0",
     "eslint-plugin-react": "^7.21.5",
     "html-webpack-plugin": "^5.0.0-alpha.14",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^26.6.3",
-    "mini-css-extract-plugin": "^1.3.1",
+    "jest": "^28.1.1",
+    "jest-environment-jsdom": "^28.1.1",
+    "mini-css-extract-plugin": "^2.6.1",
     "prop-types": "^15.7.2",
     "react-hot-loader": "^4.13.0",
-    "react-test-renderer": "^17.0.1",
+    "react-test-renderer": "^18.2.0",
     "sass": "^1.29.0",
-    "sass-loader": "^10.1.0",
-    "style-loader": "^2.0.0",
+    "sass-loader": "^13.0.0",
+    "style-loader": "^3.3.1",
     "webpack": "^5.9.0",
-    "webpack-cli": "^4.2.0",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.9.2"
   }
 }
