add color palette and font settings

--- a/package.json
+++ b/package.json
@@ -38,14 +38,22 @@
   "devDependencies": {
     "@babel/cli": "^7.12.8",
     "@babel/core": "^7.18.5",
+    "@babel/plugin-proposal-object-rest-spread": "^7.18.0",
     "@babel/preset-env": "^7.12.7",
     "@babel/preset-react": "^7.12.7",
     "@mdx-js/loader": "^2.1.2",
     "@storybook/addon-actions": "^6.5.9",
     "@storybook/addon-docs": "^6.5.9",
     "@storybook/addon-essentials": "^6.5.9",
+    "@storybook/addon-interactions": "^6.5.9",
     "@storybook/addon-links": "^6.5.9",
+    "@storybook/builder-webpack4": "^6.5.9",
+    "@storybook/builder-webpack5": "^6.5.9",
+    "@storybook/cli": "^6.5.9",
+    "@storybook/manager-webpack4": "^6.5.9",
+    "@storybook/manager-webpack5": "^6.5.9",
     "@storybook/react": "^6.5.9",
+    "@storybook/testing-library": "^0.0.13",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "babel-jest": "^28.1.1",
@@ -54,6 +62,7 @@
     "cypress": "^10.1.0",
     "eslint": "^8.18.0",
     "eslint-plugin-react": "^7.21.5",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.0.0-alpha.14",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^28.1.1",
