--- a/package.json
+++ b/package.json
@@ -25,9 +25,7 @@
   },
   "homepage": "https://github.com/Dzidzileyla/morana-frontend#readme",
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.2.0",
-    "@fortawesome/free-solid-svg-icons": "^6.2.0",
-    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@heroicons/react": "^2.0.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
