--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "homepage": "https://github.com/Dzidzileyla/morana-frontend#readme",
   "dependencies": {
+    "@headlessui/react": "^1.7.0",
     "@heroicons/react": "^2.0.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -69,6 +70,8 @@
     "postcss": "^8.4.16",
     "postcss-loader": "^7.0.1",
     "postcss-nested": "^5.0.6",
+    "prettier": "^2.7.1",
+    "prettier-plugin-tailwindcss": "^0.1.13",
     "prop-types": "^15.7.2",
     "react-hot-loader": "^4.13.0",
     "react-test-renderer": "^18.2.0",
