--- a/package.json
+++ b/package.json
@@ -82,5 +82,11 @@
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.11.0"
+  },
+  "resolutions": {
+    "trim-newlines": ">=3.0.0",
+    "glob-parent": ">=6.0.2",
+    "trim": ">=0.0.3",
+    "got": ">=9.6.0"
   }
 }
