--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "trim-newlines": ">=3.0.0",
     "glob-parent": ">=6.0.2",
     "trim": ">=0.0.3",
-    "got": ">=9.6.0"
+    "got": ">=9.6.0",
+    "loader-utils": ">=2.0.4"
   }
 }
